# ttrackr

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
migrations/2020-05-03-145046_create_task/: up.sql
migrations/2020-05-10-085841_create_worklog/: down.sql  up.sql
src/: cli.rs  config.rs  lib.rs  main.rs  ops.rs  utils.rs
src/db/: mod.rs  models.rs  ops.rs  schema.rs  utils.rs
tests/: cli.rs  utils.rs
