[package]
name = "ttrackr"
version = "0.1.0"
authors = ["michaeldvr <michael.devara@gmail.com>"]
edition = "2018"
description = "ttrackr, a time tracker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ttrackr"
path = "src/bin/main.rs"

[dependencies]
chrono = "0.4.11"
structopt = "0.3.14"
dirs = "2.0.2"
toml = "0.5.6"
serde = "1"
serde_derive = "1.0"
diesel = { version = "1.4", features = ["sqlite"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.7"
comfy-table = "0.1"
Inflector = "0.11"

[dev-dependencies]
assert_cmd = "1.0"
predicates = "1.0"
tempfile = "3.1.0"